# rust_clean_architecture

./: .env example  .gitignore  Cargo.toml  README.md  docker-compose.yml
dockerfile/api/: Dockerfile
migrations/2020-02-20-061507_create_users/: up.sql
src/: actions.rs  main.rs  models.rs  routes.rs
src/interface/controller/: user.rs
src/registory/: mod.rs  registory.rs
